# huntart-prod

./: docker-compose.yml
backend/: .env  .env-defaults  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-server.sh
backend/hunt_art/: manage.py
backend/hunt_art/api/v1/: urls.py
backend/hunt_art/api/v1/arts/: filters.py  openapi.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
backend/hunt_art/api/v1/chats/: openapi.py  pagination.py  serializers.py  urls.py  views.py
backend/hunt_art/api/v1/users/: filters.py  openapi.py  pagination.py  serializers.py  urls.py  views.py
backend/hunt_art/apps/arts/: admin.py  apps.py  models.py
backend/hunt_art/apps/arts/migrations/: 0001_initial.py  0002_alter_artcomment_options_alter_artlike_options.py  0003_artcomment_created_at.py  0004_alter_art_tags.py
backend/hunt_art/apps/chats/: admin.py  apps.py  models.py  views.py
backend/hunt_art/apps/chats/migrations/: 0001_initial.py  0002_chatmember_read_before.py
backend/hunt_art/apps/chats/templates/chats/: room.html
backend/hunt_art/apps/users/: admin.py  apps.py  managers.py  models.py
backend/hunt_art/apps/users/migrations/: 0001_initial.py  0002_alter_userprofile_options.py
backend/hunt_art/apps/websockets/: admin.py  apps.py  consumers.py  models.py  routing.py  subsystems.py
backend/hunt_art/apps/websockets/migrations/: 0001_initial.py
backend/hunt_art/hunt_art/: asgi.py  settings.py  urls.py  wsgi.py
backend/hunt_art/utils/drf_spectacular/: __init__.py  serializers.py
(+92 files in other folders)
